Fixing Contact Me Size on smaller screens

--- a/styles/indexFlex.css
+++ b/styles/indexFlex.css
@@ -448,6 +448,9 @@ cursor: not-allowed;
     .expGrid.Tools .expItem:hover, .expItem:focus {
         color: black;
     }
+    #contact_Header {
+        font-size: 2rem;
+    }
 }
 
 /* Shake animation applied to cards */
